# ros

catkin_ws/src/baby_gate/: CMakeLists.txt  package.xml
catkin_ws/src/baby_gate/include/: SerialComms.h  colormap.h
catkin_ws/src/baby_gate/launch/: baby_gate.launch
catkin_ws/src/baby_gate/src/: Serial.cpp  SerialComms.cpp  kinect_imaq_depth.cpp  kinect_imaq_disparity.cpp  object_detector.cpp  tracker.cpp  visualizer.cpp
catkin_ws/src/internet_of_things/: CMakeLists.txt  package.xml
catkin_ws/src/internet_of_things/include/: Serial.h
catkin_ws/src/internet_of_things/launch/: internet_of_things.launch
catkin_ws/src/internet_of_things/lib/: BTDongle.py  BTPeripheral.py  MySerial.py  globalDefs.py  gui_form.py  gui_form.ui  gui_update.sh
catkin_ws/src/internet_of_things/msg/: Filtered_Params.msg  Object_Params.msg
catkin_ws/src/internet_of_things/sphinx_config/: 1702.dic  1702.lm  README  corpus.txt  grammar.fsg  grammar.jsgf
catkin_ws/src/internet_of_things/src/: baby_monitor.cpp  gui.py  mamaRoo_bt_controller.py  motion_detector.py  origami_network_controller.py  voice_recognition.py
